--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,9 +5,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  cursor: none;
 }
 
 body {
   background-color: #f0f0f0;
+  cursor: url('/icons/cursor.svg') 24 24, auto;
 }
