Fix: 디자인 테마 변경

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,10 @@
 @import 'tailwindcss';
-@plugin 'daisyui';
+@plugin 'daisyui' {
+  themes: light --default, dark --prefersdark, caramellatte;
+}
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-body {
-  background-color: #f0f0f0;
 }
